@@ -7,15 +7,17 @@ import java.util.*;
  * slang
  * Created by Minh Sĩ Lê
  * Date 12/19/2021 - 9:32 PM
- * Description: ...
+ * Description: Data of dictionary
  */
 public class Data {
     private static HashMap<String, ArrayList<String>> dict;
-    private ArrayList<String> historyList;
-    private static String pathDataRoot = "data/slang.txt";
-    private static String pathDataEdit = "data/slang_edit.txt";
-    private static String pathDataHistory = "data/slang_history.txt";
+    private final ArrayList<String> historyList;
+    private static final String pathDataEdit = "data/slang_edit.txt";
+    private static final String pathDataHistory = "data/slang_history.txt";
 
+    /**
+     * Constructor
+     */
     public Data(){
         dict = new HashMap<>();
         historyList = new ArrayList<>();
@@ -23,15 +25,26 @@ public class Data {
         readHistory();
     }
 
+    /**
+     * Get history list
+     * @return ArrayList
+     */
     public ArrayList<String> getHistoryList() {
         writeHistory();
         return historyList;
     }
 
+    /**
+     * Add searched word to history list
+     * @param str
+     */
     public void addHistory(String str){
         historyList.add(str);
     }
 
+    /**
+     * read history list from file
+     */
     private void readHistory() {
         File tempFile = new File(pathDataHistory);
         boolean exists = tempFile.exists();
@@ -51,6 +64,9 @@ public class Data {
       }
     }
 
+    /**
+     * Write history list to file
+     */
     private void writeHistory(){
         try {
             BufferedWriter bw = new BufferedWriter(new FileWriter(pathDataHistory));
@@ -62,10 +78,14 @@ public class Data {
         }
     }
 
+    /**
+     * Read data of dictionary file
+     * @param isReset use root file or edited file
+     */
     public void readData(boolean isReset){
         String path;
         if (isReset) {
-            path = pathDataRoot;
+            path = "data/slang.txt";
             dict.clear();
         }
         else path = pathDataEdit;
@@ -85,6 +105,9 @@ public class Data {
         }
     }
 
+    /**
+     * Write edited dictionary to file
+     */
     public static void writeData(){
         try {
             BufferedWriter bw = new BufferedWriter(new FileWriter(pathDataEdit));
@@ -109,12 +132,22 @@ public class Data {
         }
     }
 
+    /**
+     * Get meaning of word
+     * @param str String: word
+     * @return String: result
+     */
     private ArrayList<String> getDefinition(String str) {
         ArrayList<String> result = new ArrayList<String>(Arrays.asList(str.split("\\| ")));
         return result;
     }
 
-
+    /**
+     * Search function
+     * @param str word need to search
+     * @param flag search by word or meaning
+     * @return Arraylist: search result
+     */
     public ArrayList<String> search(String str, boolean flag){
         if (flag)
             return dict.get(str.toLowerCase());
@@ -136,10 +169,20 @@ public class Data {
         }
     }
 
+    /**
+     * Add new slang word
+     * @param word word
+     * @param meaning meaning of word
+     */
     public void addNewSlangWord(String word, String meaning){
-        dict.put(word, new ArrayList<>(Arrays.asList(meaning)));
+        dict.put(word, new ArrayList<>(List.of(meaning)));
     }
 
+    /**
+     * Remove a word
+     * @param word word to remove
+     * @return boolean: success or fail
+     */
     public boolean removeKey(String word){
         if (checkWordExits(word)) {
             dict.remove(word);
@@ -148,26 +191,39 @@ public class Data {
         return false;
     }
 
+    /**
+     * Add new meaning
+     * @param word word
+     * @param def new meaning
+     */
     public void addNewDef(String word, String def){
         ArrayList<String> list = dict.get(word);
         list.add(def);
     }
 
+    /**
+     * Delete a meaning
+     * @param word word
+     * @param def meaning need to delete
+     */
     public void deleteDef(String word, String def){
         ArrayList<String> list = dict.get(word);
         list.remove(def);
     }
+
+    /**
+     * Check word exist
+     * @param word word to check
+     * @return boolean
+     */
     public boolean checkWordExits(String word){
         return dict.containsKey(word);
     }
 
-    public static void main(String[] args){
-        Data a = new Data();
-        a.search("$", true);
-        a.search(">.<", true);
-
-    }
-
+    /**
+     * Random word
+     * @return String
+     */
     public String randomWord(){
         Set<String> keySet = dict.keySet();
         ArrayList<String> keyList = new ArrayList<>(keySet);
@@ -179,18 +235,30 @@ public class Data {
         return randomKey;
     }
 
+    /**
+     * Random definition
+     * @return String
+     */
     public String randomDef(){
         ArrayList<String> meanings = dict.get(randomWord());
         int randIdx = new Random().nextInt(meanings.size());
         return meanings.get(randIdx);
     }
 
+    /**
+     * Random definition
+     * @return String
+     */
     public String randomDef(String word){
         ArrayList<String> meanings = dict.get(word);
         int randIdx = new Random().nextInt(meanings.size());
         return meanings.get(randIdx);
     }
 
+    /**
+     * Word for today
+     * @return String
+     */
     public String wordForToday(){
         Set<String> keySet = dict.keySet();
         ArrayList<String> keyList = new ArrayList<>(keySet);
@@ -203,15 +271,11 @@ public class Data {
         return "\t               " + randomKey+ "\n" + toString(randomValue);
     }
 
-    public String toStringOneLine(ArrayList<String> str){
-        String res = "";
-        for (String s : str)
-        {
-            res += s + ", ";
-        }
-        return res;
-    }
-
+    /**
+     * Convert Arraylist to String
+     * @param str Arraylist
+     * @return String
+     */
     public String toString(ArrayList<String> str){
         String res = "";
         for (String s : str)
